<resources>
    <!--<string name="app_name">Narengi 2</string>-->

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="search_hint">دنبال چه جور جایی هستی؟</string>

    <!-- Drawer menu -->
    <string name="drawer_welcome_message">خوش آمدید</string>
    <string name="drawer_menu_login_register">عضویت/ورود</string>
    <string name="drawer_menu_settings">تنظیمات</string>
    <string name="drawer_menu_profile">پروفایل</string>
    <string name="drawer_menu_hosting">مهمان پذیری</string>
    <string name="drawer_menu_book_requests">درخواست های رزرواسیون</string>
    <string name="drawer_menu_about_us">درباره نارنگی</string>
    <string name="drawer_menu_map">نمایش نقشه</string>

    <!-- Drawer menu, logged in -->
    <string name="drawer_menu_inbox">پیام ها</string>
    <string name="drawer_menu_favorites">علاقه‌مندی‌ها</string>
    <string name="drawer_menu_logout">خروج از حساب کاربری</string>

    <string-array name="search_history_array">
        <item>تهران</item>
        <item>تبریز</item>
        <item>رشت</item>
        <item>آمل</item>
    </string-array>

    <string-array name="search_suggestion_titles_array">
        <item>شهر</item>
        <item>جاذبه</item>
        <item>اقامتگاه</item>
    </string-array>
    <string name="title_activity_house_features">HouseFeaturesActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_host">HostActivity</string>

    <string name="currency_rials">ریال</string>
    <string name="night_caption">شب</string>
    <string name="multiply_mark">*</string>
    <string name="plus_mark">+</string>
    <string name="minus_mark">-</string>
    <string name="close_button">بستن</string>
    <string name="title_activity_house_map">Map</string>
    <string name="title_activity_host_houses">HostHousesActivity</string>
    <string name="cancel_button">انصراف</string>
    <string name="ok_button">تایید</string>

    <string name="enable_location_alert_title">تنظیمات مکان یابی</string>
    <string name="enable_location_alert_message">سرویس مکان یابی گوشی شما غیر فعال می باشد. برای دریافت مختصات مکان فعلی تان، باید سرویس مکان یابی را از بخش تنظیمات گوشی فعال نمایید.</string>
    <string name="title_activity_book_requests">BookRequestsActivity</string>
    <string name="user_avatar">عکس پروفایل</string>
    <string name="home">خانه</string>
    <string name="profile">پروفایل</string>
    <string name="user_guide">راهنمایی</string>
    <string name="please_wait">لطفا کمی صبر کنید...</string>
    <string name="i_forgot_my_password">رمز عبورم را فراموش کرده‌ام!</string>
    <string name="retry">تلاش مجدد</string>
    <string name="invalid_data">اطلاعات به درستی وارد نشده است</string>
    <string name="invalid_position">موقعیت رو بر روی نقشه مشخص کنید</string>
    <string name="invalid_price">قیمت به درستی وارد نشده است</string>
    <string name="invalid_day">حداقل ۱ روز را انتخاب کنید</string>
    <string name="currency_thousan_toman">هزار تومان</string>
    <string name="cannot_retrieve_selected_image">مشکل در دریافت عکس</string>
    <string name="harshabeghamat">هر شب اقامت</string>
    <string name="bedroom">اتاق خواب</string>
    <string name="geust">مهمان</string>
    <string name="bed">تخت</string>
    <string name="owner_profile">پروفایل مالک</string>
    <string name="owner_contact">ارتباط با مالک</string>
    <string name="more_service">خدمات و قیمت‌های اضافی</string>
    <string name="terms">شرایط و قوانین</string>
    <string name="book">اجاره میکنم</string>
    <string name="transition_string">shared</string>
    <string name="free">رایگان</string>
    <string name="identity">هویت من را تایید کن</string>
    <string name="eghmat">اقامتگاه‌ها</string>
    <string name="aboutme">درباره من</string>

    <!--Armin Strings-->
    <string name="search_view_scrolling_behavior">xyz.narengi.android.armin.utils.SearchViewScrollingBehavior</string>

</resources>
