<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/MenuLoginRegister"
            android:checkable="false"
            android:icon="@drawable/ic_action_login_signup"
            android:title="@string/drawer_menu_login_register" />
        <item
            android:id="@+id/MenuHome"
            android:checkable="false"
            android:icon="@drawable/home_ic"
            android:title="@string/home" />
        <item
            android:id="@+id/MenuSettings"
            android:checkable="false"
            android:icon="@drawable/setting_ic"
            android:title="@string/drawer_menu_settings" />
        <item
            android:id="@+id/MenuUserGuide"
            android:checkable="false"
            android:icon="@drawable/help_ic"
            android:title="@string/user_guide" />
    </group>
</menu>