<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--<item-->
            <!--android:id="@+id/navigation_item_settings"-->
            <!--android:checked="true"-->
            <!--android:icon="@android:drawable/ic_menu_more"-->
            <!--android:title="@string/drawer_menu_settings"/>-->
        <item
            android:id="@+id/navigation_item_login_register"
            android:checked="false"
            android:icon="@drawable/ic_action_login_signup"
            android:title="@string/drawer_menu_login_register"/>
        <item
            android:id="@+id/navigation_item_hosting"
            android:checked="false"
            android:icon="@drawable/ic_action_hosting"
            android:title="@string/drawer_menu_hosting"/>

        <item
            android:id="@+id/navigation_item_aboutUs"
            android:checked="false"
            android:icon="@drawable/ic_action_about_narengi"
            android:title="@string/drawer_menu_about_us"/>
    </group>
</menu>